45) HSO driver up to 1.14-Option version. (backported from new kernel verion).<br>
46) Backport fixes usb from new ralink sdk.<br>
47) Add hack in xl2tp and fix config in l2tp_helper for support new beeline l2tp logic.<br>
48) Iptables not need drop all icmp in vpn mode (fix ping frome wan in some situations).<br>
49) Add hotplug logic for flash/hdd/modems support.<br>
50) Remove dev_fs dead code from ralink drivers and others kernel subsystem/toolchain/boot.<br>
51) Increase priority for pppd and xl2tpd for prevent disconnect at high cpu load.<br>
52) Workaround to work IMQ and correct Mark with HW_NAT or Software Fastpath enable by default.<br>
53) Some fastnat optimization. Save ~3% CPU at L2TP connection and more correct conntrack work.<br>
54) PPP prevent drop session at high cpu load. If cpu load > max allowed ppp must drop packets.<br>
55) Fix MINIUPNP rules position in iptables script(change to PFW->UPNP->DMZ from PFW->DMZ->UPNP).<br>
56) Update miniupnp and libnatpmp to 1.5.20110715 version.<br>
57) Fix script generate for webstr.<br>
58) Fix mbssid up logic.<br>
59) Fix fuse_daemonize with uClibc.<br>
60) xt_webstr now work with nat offload enabled (Content Filter work OK).<br>
61) Add hardware led indication update firmware process(Use WPS and SEC LEDs).<br>
62) Fix modutils code need used /etc for modules.* files(aliases and other).<br>
63) Add workaround for work nat offload in chillispot mode(skip offload tun traffic).<br>
64) Update radvd to stable tree.<br>
65) Cleanup buildtree and more correct build.<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>