@@ -507,6 +507,8 @@
 63) Add workaround for work nat offload in chillispot mode(skip offload tun traffic).<br>
 64) Update radvd to stable tree.<br>
 65) Cleanup buildtree and more correct build.<br>
+66) Fix pptp plugin segfault on some time and some ISP.<br>
+67) Expand ppp watchdog.<br>
 
 <br><br>
 <b>For support see:</b><br>
